--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO</title>
 <h1>My First Heading</h1><p>My first paragraph.</p>
-<h1>My First Heading</h1><p>My first paragraph.</p>
+<h1>My 2 Heading</h1><p>My first 2.</p>
 </body></html>
