--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><body>
 <title>COBO</title>
-<h1>My First Heading</h1><p>My first paragraph.</p>
-<h2>My 2 Heading</h2><p>My first 2.</p>
+<h1>My First Heading</h1>
+<h2>My 2 Heading</h2>
+<h3>My 3 Heading</h3>
 </body></html>
