--- a/aviso.html
+++ b/aviso.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body>
-<title>COBO</title>
-<h1>O Denisg</h1>
-<h2>ama o</h2>
-<h3>CURITIÃ!</h3>
+<title>COBO do Brasil</title>
+<h1>Aviso 1</h1>
+<h2>Aviso 2</h2>
+<h3>Aviso 3</h3>
 </body></html>
