--- a/aviso.html
+++ b/aviso.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h1>
-<h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h2>
-<h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h3>
+<h1>Aviso1</h1>
+<h2>Aviso 2</h2>
 </body></html>
