--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>Aviso1</h1>
-<h2>Aviso 2</h2>
+<h1>_ Aviso 1 _</h1>
+<h2>_ Aviso 2 _</h2>
 </body></html>
