--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>Hoje tem café</h1>
-<h2>Amanhã também</h2>
+<h1>COBO</h1>
+<h2>do Brasil</h2>
 </body></html>
