--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>COBO</h1>
-<h2>do Brasil</h2>
+<h1>COBO do Brasil</h1>
+<h2> 🚗 </h2>
 </body></html>
