--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>Flavio, você foi demitido!</h1>
-<h2></h2>
+<h1>Amanhã sairemos mais cedo</h1>
+<h2>Saída as 13:00</h2>
 </body></html>
