--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body>
 <title>COBO do Brasil</title>
-<h1>    Teste c   </h1>
+<h1>    Teste b   </h1>
 <h2></h2>
 </body></html>
