--- a/aviso.html
+++ b/aviso.html
@@ -1,5 +1,16 @@
-<!DOCTYPE html><html><body>
-<title>COBO do Brasil</title>
-<h1></h1>
-<h2></h2>
-</body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+    <script type="text/javascript">
+        function changetext() {
+            document.getElementById("target").innerHTML = document.getElementById("campo").value;
+        }
+    </script>
+</head>
+<body>
+    <h1 id="target">Texto</h1>
+    <input type="text" id="campo">
+    <input type="button" onclick="changetext()">
+</body>
+</html>
