--- a/aviso.html
+++ b/aviso.html
@@ -14,9 +14,9 @@
 <body>
     <h1 id="target1"></h1>
     <input type="text" id="campo1">
-    <input type="button" onclick="changetext()">
-    <h1 id="target1"></h1>
-    <input type="text" id="campo1">
-    <input type="button" onclick="changetext()">
+    <input type="button" onclick="changetext1()">
+    <h2 id="target1"></h2>
+    <input type="text" id="campo2">
+    <input type="button" onclick="changetext2()">
 </body>
 </html>
