--- a/aviso.html
+++ b/aviso.html
@@ -16,7 +16,7 @@
     <input type="text" id="campo1">
     <input type="button" onclick="changetext1()">
     <h2 id="target1"></h2>
-    <input type="text" id="campo2">
-    <input type="button" onclick="changetext2()">
+    <input type="text" id="campo2" value="Aviso 1">
+    <input type="button" onclick="changetext2()" value="Aviso 2">
 </body>
 </html>
