--- a/aviso.html
+++ b/aviso.html
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Avisos fábrica - COBO do Brasil</title>
-    <script type="text/javascript">
-        function changetext1() {
-            document.getElementById("target1").innerHTML = document.getElementById("campo1").value;
-        }
-        function changetext2() {
-            document.getElementById("target2").innerHTML = document.getElementById("campo2").value;
-        }
-    </script>
-</head>
-<body>
-    <h5>Configurar aviso 1:</h5>
-    <input type="text" id="campo1" value="Aviso 1">
-    <input type="button" onclick="changetext1()" value="Ok">
-    <h6>Configurar aviso 1:</h6>
-    <input type="text" id="campo2" value="Aviso 2">
-    <input type="button" onclick="changetext2()" value="Ok">
-    
-    <h1 id="target1"></h1>
-    <h2 id="target2"></h2>
-</body>
-</html>
+<!DOCTYPE html><html><body>
+<title>COBO do Brasil</title>
+<h1>Teste</h1>
+<h2></h2>
+</body></html>
